# tutor-contrib-authz

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
tutorauthz/: plugin.py
tutorauthz/patches/: mfe-lms-production-settings  openedx-dev-dockerfile-post-python-requirements  openedx-dockerfile-post-python-requirements
tutorauthz/templates/authz/tasks/cms/: init
tutorauthz/templates/authz/tasks/lms/: init
